# FinEng-in-IRFX

./: .clang-format  .clang-format.sh  .gitignore  CMakeLists.txt  LICENSE  README.md  binder.cpp  build_and_test_proj.sh  clean_build.sh  deploy_cpp_module.sh  format_python.sh  launch_jupyter.sh
.github/workflows/: cpp-format.yml  cpp-ubuntu.yml
Lecture1/Lecture1/: BinModel01.cpp  BinModel01.hpp  BlackScholes.cpp  BlackScholes.hpp  Options01.cpp  Options01.hpp  main.cpp
Lecture2/Lecture2/: BinModel02.cpp  BinModel02.hpp  BlackScholes.cpp  BlackScholes.hpp  Options04.cpp  Options04.hpp  Options05.cpp  Options05.hpp  main.cpp  payoff.cpp  payoff.hpp
src/: binder.cpp  main.cpp
src/Lecture1/: BinModel01.cpp  BinModel01.hpp  BlackScholes.cpp  BlackScholes.hpp  Options01.cpp  Options01.hpp
src/Lecture2/: BinModel02.cpp  BinModel02.hpp  BlackScholes.cpp  BlackScholes.hpp  Options04.cpp  Options04.hpp  Options05.cpp  Options05.hpp  payoff.cpp  payoff.hpp
src/Lecture3/: Options07.cpp  Options07.hpp
src/Lecture4/: BSModel01.cpp  BSModel01.hpp  ControlVariate.cpp  ControlVariate.hpp  PathDepOption01.cpp  PathDepOption01.hpp  RNGenerator.cpp  RNGenerator.hpp
src/Lecture5/: BSModel02.cpp  BSModel02.hpp  Matrix.cpp  Matrix.hpp  PathDepBasketOptions.cpp  PathDepBasketOptions.hpp
src/pybind_example/: README.md  mymath.cpp  mymath.hpp
src/python/: pybind_example.py  pybind_example_nb.ipynb  requirements.txt
src/python/Lecture1/: binomial_tree.py  binomial_tree_distribution.ipynb
tests/: CMakeLists.txt  lecture1_test.cpp  lecture2_test.cpp  lecture3_test.cpp  lecture4_test.cpp  lecture5_test.cpp
(+13 files in other folders)
